Code clean-up (#294)